Fix Layout Issues with Grid

--- a/src/App.scss
+++ b/src/App.scss
@@ -35,16 +35,16 @@ body {
   justify-content: center;
 }
 .routes {
-  margin-top: 60px;
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
 
   .tab {
     display: flex;
     font-size: 12px;
-    margin: 10px 0px 30px 0px;
+    margin: 10px 0px;
     padding-left: 15px;
-    height: 40px;
+    height: 50px;
     width: 185px;
     color: white;
     border-radius: 3em 0em 0em 3em;
@@ -75,28 +75,26 @@ body {
   .tab-active:before {
     content: "";
     position: absolute;
-    top: -40px;
+    top: -50px;
     right: 0px;
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
     background: none;
+    border: transparent;
     border-bottom-right-radius: 50%;
-    box-shadow: 0 20px 0 0 white;
+    box-shadow: 0 25px 0 0 white;
   }
   .tab-active:after {
     content: "";
     position: absolute;
-    bottom: -40px;
+    bottom: -50px;
     right: 0px;
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
+    border: transparent;
     background: none; /* Solo cambiar esta linea por background:none y listo */
     border-top-right-radius: 50%;
-    box-shadow: 0 -20px 0 0 white;
-  }
-  .logout {
-    background-color: transparent;
-    margin-top: 60px;
+    box-shadow: 0 -25px 0 0 white;
   }
 }
 
@@ -172,11 +170,13 @@ body {
 div#controls {
   display: flex;
   max-height: 300px;
-  flex-flow: column wrap;
+  flex-flow: column nowrap;
   margin-top: 15px;
-  div {
+  #temperature,
+  #light,
+  #humidity {
     flex: 1 1 110px;
-    width: 40%;
+    width: 100%;
     border: 1px solid #e4e4e4;
     border-radius: 3em;
   }
@@ -190,6 +190,23 @@ div#controls {
     margin-top: 15px;
   }
 }
+#temperature {
+  display: flex;
+  flex-flow: row nowrap;
+  .icon {
+    flex: 1;
+    margin: 20px;
+    background-color: white;
+    border-radius: 50%;
+    box-shadow: 0px 10px 20px #e9e9e9;
+  }
+  .icon:before {
+    content: "";
+    display: block;
+    padding-top: 100%;
+  }
+}
+
 //Spending Chart
 div#spending {
   flex: 1 1 auto;
